<!--
  ~ /*
  ~  * Copyright 2021 UBICUA.
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<resources>
    <string name="app_name">UBICUA SSIDO</string>

    <string name="permission_needs">This app needs permissions</string>

    <string name="title_activity_onboard">Create keys</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_home">Main</string>

    <!-- Onboard messages -->
    <string name="onboard_desc_new_user">Messages</string>
    <string name="onboard_desc">To generate your public and private keys, enter a username (the one you like)</string>
    <string name="onboard_title">Ready!</string>
    <string name="onboard_username_hint">Enter your user name</string>
    <string name="onboard_display_name_hint">Enter your display name</string>
    <string name="onboard_button">Register</string>

    <!-- Home messages -->
    <string name="main_delete_button">Delete account</string>
    <string name="main_register_button">Register account</string>
    <string name="main_authenticate_button">Authenticate</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
